5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1582_2897.log
== TEST (2019-03-13 12:45:23) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(input*2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input*2)
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:45:28) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(input*2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input*2)
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:45:31) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(input*2)
-- EXECUTION TIME:
0.193934
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2897/main.py", line 7, in <module>
    print(input*2)
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:45:35) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(input*2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input*2)
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:45:38) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(input*2)
-- EXECUTION TIME:
0.183928
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2897/main.py", line 7, in <module>
    print(input*2)
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:45:45) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(input*2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input*2)
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:45:48) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(input*2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input*2)
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:45:50) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(input*2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input*2)
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:45:56) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(input*2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input*2)
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:46:19) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(input)
-- OUTPUT:
<built-in function input>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:46:34) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(7*2)
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:46:38) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(7*2)
-- EXECUTION TIME:
0.159784
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
14
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
14
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:46:42) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(7*2)
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:46:54) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(int()*2)
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 12:47:08) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(input()*2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input()*2)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:47:15) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(input()*2)
-- EXECUTION TIME:
0.14103
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2897/main.py", line 7, in <module>
    print(input()*2)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:28:51) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(input()*2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input()*2)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:29:11) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int

# Impressao do dobro do numero
print(input("Digite o numero: ")*2)
-- OUTPUT:
12341234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 21:29:18) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int

# Impressao do dobro do numero
print(input("Digite o numero: ")*2)
-- EXECUTION TIME:
0.112015
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
12341234
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
444444
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:29:22) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int

# Impressao do dobro do numero
print(input("Digite o numero: ")*2)
-- OUTPUT:
12341234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:29:45) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(("Digite o numero: ")*2)

# Impressao do dobro do numero
print(input("Digite o numero: ")
-- ERROR:
File "XXXX", line 8
    
                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:29:49) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(("Digite o numero: "))

# Impressao do dobro do numero
print(input("Digite o numero: ")
-- ERROR:
File "XXXX", line 8
    
                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:30:45) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(("Digite o numero: "))

# Impressao do dobro do numero
print(num*2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(("Digite o numero: "))
ValueError: invalid literal for int() with base 10: 'Digite o numero: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:31:00) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(("Digite o numero: "))

# Impressao do dobro do numero
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(("Digite o numero: "))
ValueError: invalid literal for int() with base 10: 'Digite o numero: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:31:14) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(("Digite o numero: "))
ValueError: invalid literal for int() with base 10: 'Digite o numero: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:31:22) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(num*2)
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 21:31:26) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.137117
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
